app/main/default/objects/LocalFlosum__Temp_Log__c/fields/LocalFlosum__Batch_Job_Id__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Batch_Job_Id__c</fullName>
        <label>Batch Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>