app/main/default/objects/LocalFlosum__Temp_Log__c/fields/LocalFlosum__Completed_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>