app/main/default/objects/LocalFlosum__Temp_Log__c/fields/LocalFlosum__Job_Completed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Job_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Completed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>