app/main/default/objects/LocalFlosum__Temp_Log__c/fields/LocalFlosum__Metadata_Types__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Metadata_Types__c</fullName>
        <label>Metadata Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>