app/main/default/objects/LocalFlosum__Temp_Log__c/fields/LocalFlosum__Process_Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Process_Type__c</fullName>
        <label>Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retrieve</fullName>
                </value>
                <value>
                    <fullName>Schedule Deployment</fullName>
                </value>
                <value>
                    <fullName>Test Execution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>