app/main/default/objects/LocalFlosum__Temp_Log__c/fields/LocalFlosum__Run_Test_Param__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Run_Test_Param__c</fullName>
        <label>Run Test Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>