app/main/default/objects/LocalFlosum__Temp_Log__c/fields/LocalFlosum__Snapshot__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snapshot</label>
        <referenceTo>LocalFlosum__Snapshot__c</referenceTo>
        <relationshipLabel>Temp Logs</relationshipLabel>
        <relationshipName>Temp_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>