app/main/default/objects/LocalFlosum__Temp_Log__c/fields/LocalFlosum__Specified_Tests__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Specified_Tests__c</fullName>
        <label>Specified Tests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>