app/main/default/objects/LocalFlosum__Temp_Log__c/fields/LocalFlosum__Start_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>