app/main/default/objects/LocalFlosum__Temp_Log__c/fields/LocalFlosum__Succeed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Succeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Succeed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>